tests/deploy_errors/connector_bad_kind/error.txt
Error: 
    1 | define connector empty from 1 + 2 + 3;
      |                             ^ Found the token `1` but expected `<ident>`
    2 | 
    3 | deploy fake